--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.7.10",
     "mongoose-paginate": "^5.0.3",
+    "multer": "^1.4.2",
     "require-dir": "^1.2.0"
   },
   "devDependencies": {
